remove jdk8 judge